--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,10 @@
 .swiftpm/
 migrate_working_dir/
 
+# Environment files with secrets
+web/env.js
+!web/env.example.js
+
 # IntelliJ related
 *.iml
 *.ipr
