--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,14 @@
 # StartSmart Backend - API Dependencies
-# For Render Deployment
+# For Vercel Serverless Deployment (NO DATABASE CONNECTION)
 
 # Core Web Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 
-# Database
+# SQLAlchemy for model definitions (no actual DB connection)
 sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+# psycopg2-binary REMOVED - no PostgreSQL connection needed
 
 # Environment & Configuration
 python-dotenv==1.0.0
