Configure frontend for Vercel deployment - Set kIsProduction=true - Updated vercel.json for static deployment - Built web release

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "name": "startsmart-frontend",
-  "buildCommand": "flutter build web --release",
+  "buildCommand": null,
   "outputDirectory": "build/web",
-  "installCommand": "echo 'Flutter SDK should be available'",
+  "installCommand": null,
   "framework": null,
   "routes": [
     {
