--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,9 @@ sqlalchemy==2.0.23
 # Environment & Configuration
 python-dotenv==1.0.0
 
+# NumPy - MUST be <2.0 for shapely compatibility on Vercel
+numpy<2
+
 # Geospatial Operations
 shapely==2.0.2
 
