--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "name": "startsmart-frontend",
   "buildCommand": null,
-  "outputDirectory": "build/web",
+  "outputDirectory": ".",
   "installCommand": null,
   "framework": null,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
